tests/snapshots/snapshot_tests__snapshot_boolean_assignment.snap
---
source: tests/snapshot_tests.rs
assertion_line: 25
expression: output
---
#!/bin/sh
# Generated by Shard

__shard_active=true
