tests/snapshots/snapshot_tests__snapshot_command_with_args.snap
---
source: tests/snapshot_tests.rs
assertion_line: 49
expression: output
---
#!/bin/sh
# Generated by Shard

__shard_stdout_tmp=$(mktemp)
__shard_stderr_tmp=$(mktemp)
ls "$__shard_-la" "$__shard_/home" > "$__shard_stdout_tmp" 2> "$__shard_stderr_tmp"
__shard_status=$?
__shard_stdout=$(cat < "$__shard_stdout_tmp")
__shard_stderr=$(cat < "$__shard_stderr_tmp")
rm -f "$__shard_stdout_tmp" "$__shard_stderr_tmp"
