tests/snapshots/snapshot_tests__snapshot_empty_program.snap
---
source: tests/snapshot_tests.rs
assertion_line: 93
expression: output
---
#!/bin/sh
# Generated by Shard
