tests/snapshots/snapshot_tests__snapshot_full_example.snap
---
source: tests/snapshot_tests.rs
assertion_line: 76
expression: output
---
#!/bin/sh
# Generated by Shard

__shard_name='Shard'

__shard_stdout_tmp=$(mktemp)
__shard_stderr_tmp=$(mktemp)
echo 'Hello' "$__shard_name" > "$__shard_stdout_tmp" 2> "$__shard_stderr_tmp"
__shard_status=$?
__shard_stdout=$(cat < "$__shard_stdout_tmp")
__shard_stderr=$(cat < "$__shard_stderr_tmp")
rm -f "$__shard_stdout_tmp" "$__shard_stderr_tmp"
