tests/snapshots/snapshot_tests__snapshot_mixed_program.snap
---
source: tests/snapshot_tests.rs
assertion_line: 58
expression: output
---
#!/bin/sh
# Generated by Shard

__shard_name='Shard'

__shard_version=1

__shard_stdout_tmp=$(mktemp)
__shard_stderr_tmp=$(mktemp)
echo "$__shard_name" > "$__shard_stdout_tmp" 2> "$__shard_stderr_tmp"
__shard_status=$?
__shard_stdout=$(cat < "$__shard_stdout_tmp")
__shard_stderr=$(cat < "$__shard_stderr_tmp")
rm -f "$__shard_stdout_tmp" "$__shard_stderr_tmp"

__shard_stdout_tmp=$(mktemp)
__shard_stderr_tmp=$(mktemp)
print "$__shard_version" > "$__shard_stdout_tmp" 2> "$__shard_stderr_tmp"
__shard_status=$?
__shard_stdout=$(cat < "$__shard_stdout_tmp")
__shard_stderr=$(cat < "$__shard_stderr_tmp")
rm -f "$__shard_stdout_tmp" "$__shard_stderr_tmp"
