tests/snapshots/snapshot_tests__snapshot_multiple_assignments.snap
---
source: tests/snapshot_tests.rs
assertion_line: 85
expression: output
---
#!/bin/sh
# Generated by Shard

__shard_x=1

__shard_y=2

__shard_z='three'
