tests/snapshots/snapshot_tests__snapshot_null_assignment.snap
---
source: tests/snapshot_tests.rs
assertion_line: 33
expression: output
---
#!/bin/sh
# Generated by Shard

__shard_value=null
