tests/snapshots/snapshot_tests__snapshot_simple_assignment.snap
---
source: tests/snapshot_tests.rs
assertion_line: 9
expression: output
---
#!/bin/sh
# Generated by Shard

__shard_x=10
