tests/snapshots/snapshot_tests__snapshot_simple_command.snap
---
source: tests/snapshot_tests.rs
assertion_line: 37
expression: output
---
#!/bin/sh
# Generated by Shard

__shard_stdout_tmp=$(mktemp)
__shard_stderr_tmp=$(mktemp)
echo "$__shard_hello" > "$__shard_stdout_tmp" 2> "$__shard_stderr_tmp"
__shard_status=$?
__shard_stdout=$(cat < "$__shard_stdout_tmp")
__shard_stderr=$(cat < "$__shard_stderr_tmp")
rm -f "$__shard_stdout_tmp" "$__shard_stderr_tmp"
