tests/snapshots/snapshot_tests__snapshot_string_assignment.snap
---
source: tests/snapshot_tests.rs
assertion_line: 17
expression: output
---
#!/bin/sh
# Generated by Shard

__shard_name='Shard'
